cmake_minimum_required(VERSION 2.8)
PROJECT(ST)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")
INCLUDE(Utils)

INCLUDE_DIRECTORIES("Include")
IF (DEBUG)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -DDEBUG")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g -DDEBUG")
ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DNDEBUG -O2")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -DNDEBUG -O2")
ENDIF()

FIND_PACKAGE(FLEX)
FIND_PACKAGE(LEMON)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_SUBDIRECTORY(src)
IF(NOT DEFINED PLUGIN)
    SET (PLUGIN 1)
ENDIF()
IF (PLUGIN)
    ADD_SUBDIRECTORY(stSDL)
ENDIF()
IF (DEVEL)
    INSTALL (DIRECTORY Include/ DESTINATION include/ST)
ENDIF()
