cmake_minimum_required(VERSION 2.8)
PROJECT(ST)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")
INCLUDE(Utils)

INCLUDE_DIRECTORIES("Include")
IF (DEBUG)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -DDEBUG")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g -DDEBUG")
ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DNDEBUG -O2")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -DNDEBUG -O2")
ENDIF()

FIND_PACKAGE(FLEX)
FIND_PACKAGE(LEMON)

ADD_SUBDIRECTORY(Parser)
ADD_SUBDIRECTORY(AST)
ADD_SUBDIRECTORY(STC)
ADD_SUBDIRECTORY(BaseType)
ADD_SUBDIRECTORY(BuiltinType)
ADD_SUBDIRECTORY(Runtime)
ADD_SUBDIRECTORY(Exception)
ADD_SUBDIRECTORY(test)
