INCLUDE_DIRECTORIES(".")
    ADD_CUSTOM_COMMAND(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp" "${CMAKE_CURRENT_BINARY_DIR}/Parser.h"
        COMMAND ${LEMON_EXECUTABLE} Parser.y | cat
        COMMAND mv Parser.c "${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp"
        COMMAND mv Parser.h "${CMAKE_CURRENT_BINARY_DIR}/Parser.h"
        COMMAND rm Parser.out
        DEPENDS Parser.y
        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
        )

ADD_CUSTOM_COMMAND(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/Lexer.cpp" "${CMAKE_CURRENT_BINARY_DIR}/Lexer.h"
    COMMAND "${FLEX_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/Lexer.l"
    MAIN_DEPENDENCY Lexer.l
    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
    )

ADD_LIBRARY(Parser STATIC "${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp" "${CMAKE_CURRENT_BINARY_DIR}/Lexer.cpp")
